fix: reduce z-index to align with kibana
I've moved the z-index value to a decent value for kibana to appear below the current navigation bars

--- a/src/components/portal/_portal.scss
+++ b/src/components/portal/_portal.scss
@@ -1,6 +1,6 @@
 [id^='echTooltipPortal'] {
   pointer-events: none;
-  z-index: 9000;
+  z-index: 10;
 }
 
 [id^='echAnchor'] {
